fix: SpellCheckCommandTest, mock JLanguageTool