@@ -9,9 +9,7 @@ import org.languagetool.rules.RuleMatch;
 
 import java.io.IOException;
 import java.util.Collections;
-import java.util.List;
 
-import static org.junit.jupiter.api.Assertions.*;
 import static org.mockito.Mockito.*;
 
 /**
@@ -33,17 +31,23 @@ public class SpellCheckCommandTest {
     public void testSpellCheckCommand() throws IOException {
         // 设置模拟对象，使其返回空的检查结果
         when(mockLangTool.check(anyString())).thenReturn(Collections.emptyList());
-        Command spellCheckCommand = new SpellCheckCommand(document);
+        Command spellCheckCommand = new SpellCheckCommand(document) {
+            @Override
+            protected JLanguageTool getLangTool() {
+                return mockLangTool;
+            }
+        };
 
         // 添加文本元素到文档中
-        TextElement textElement = new TextElement("A sentence with a spelling error.");
+        String toCheckText = "A sentence with a spelling error.";
+        TextElement textElement = new TextElement(toCheckText);
         document.getBody().addChild(textElement);
 
         // 执行拼写检查命令
         spellCheckCommand.execute();
 
         // 验证是否调用了LanguageTool的检查方法
-        verify(mockLangTool).check("A sentence with a spelling error.");
+        verify(mockLangTool).check(toCheckText);
     }
 
     @Test
@@ -53,17 +57,23 @@ public class SpellCheckCommandTest {
         when(ruleMatch.getFromPos()).thenReturn(10);
         when(ruleMatch.getToPos()).thenReturn(19);
         when(ruleMatch.getMessage()).thenReturn("Spelling mistake");
-        when(mockLangTool.check(anyString())).thenReturn(List.of(ruleMatch));
-        Command spellCheckCommand = new SpellCheckCommand(document);
+        when(mockLangTool.check(anyString())).thenReturn(Collections.emptyList());
+        Command spellCheckCommand = new SpellCheckCommand(document) {
+            @Override
+            protected JLanguageTool getLangTool() {
+                return mockLangTool;
+            }
+        };
 
         // 添加文本元素到文档中
-        TextElement textElement = new TextElement("A sentence with a spelling error.");
+        String toCheckText = "A sentence with a spelling error.";
+        TextElement textElement = new TextElement(toCheckText);
         document.getBody().addChild(textElement);
 
         // 执行拼写检查命令
         spellCheckCommand.execute();
 
         // 验证是否调用了LanguageTool的检查方法
-        verify(mockLangTool).check("A sentence with a spelling error.");
+        verify(mockLangTool).check(toCheckText);
     }
 }
